--- a/美国大学信息/北美性价比大学学费.md
+++ b/美国大学信息/北美性价比大学学费.md
@@ -7,17 +7,17 @@ North Caronina State University(NCSU)|41,603 |http://financialaid.ncsu.edu/
 San Jose State University(SJSU)|27,493|http://www.sjsu.edu/
 New York University(NYU) Polytechnic school|56,686|http://engineering.nyu.edu/
 The University of North carolina at CHAPEL HILL(UNC)|50,360|http://www.unc.edu/
-Northeastern University(NEU)|60000|http://www.northeastern.edu/
+Northeastern University(NEU)|60,000|http://www.northeastern.edu/
 Texas A&M University(TAMU)|29,758|https://www.tamu.edu/
-The University of texas at Dallas(UTD)|31000|http://www.utdallas.edu/
+The University of texas at Dallas(UTD)|31,000|http://www.utdallas.edu/
 University of Colorado Boulder(CU Boulder)|34,982|http://bursar.colorado.edu/
-The State University of New York(suny)|33092|https://www.suny.edu
+The State University of New York(suny)|33,092|https://www.suny.edu
 The Pennsylvania State University(PSU)|47,548|http://admissions.psu.edu/
 Arizona State University(ASU)|48,604|https://students.asu.edu
 University of California San Diego(UCSD)|54,402|https://students.ucsd.edu/
 Texas Tech University(TTU)|31,502|https://www.ttu.edu/
-University of Texas Arlington(UTA)|30000|http://www.uta.edu/
-University of Texas - Austin (utexas)|22891|http://www.utexas.edu/
+University of Texas Arlington(UTA)|30,000|http://www.uta.edu/
+University of Texas - Austin (utexas)|22,891|http://www.utexas.edu/
 Southern Methodist University(smu)|64,840|https://www.smu.edu
 Iowa State University (ISU)|34,400|http://www.iastate.edu/
 University of Waterloo|45000|https://uwaterloo.ca
@@ -30,12 +30,12 @@ Illinois Institute of Technology(IIT)|41,148|http://admissions.iit.edu/graduate/
 Santa Clara University(SCU)|39,822|http://www.scu.edu/financialaid/Cost-of-Attendance.cfm
 University of California, Santa Barbara(UCSB)|50,100|http://admissions.sa.ucsb.edu/cost/cost-of-attendance|http://www.graddiv.ucsb.edu/departments/view/13/
 University of California Irvine(UCI)|36,906|https://www.ofas.uci.edu/content/costs.aspx?nav=5
-Syracuse(syr)|$46,258|http://www.syr.edu/gradschool/em/pdfs/costs.pdf
+Syracuse(syr)|46,258|http://www.syr.edu/gradschool/em/pdfs/costs.pdf
 University Of Pennsylvania (upenn)|63,259|http://www.seas.upenn.edu/prospective-students/graduate/admissions/pay.php
 Trustees of Dartmouth College(dartmouth)|67,044|http://admissions.dartmouth.edu/financial-aid/cost-attendance/cost-attendance
 University of Massachusetts Amherst(umass)|42,007|https://www.umass.edu/umfa/undergraduates/costs
 Oregon State University(OSU)|38,733|http://financialaid.oregonstate.edu/review_costofattendance
-University of Pittsburgh(pitt)|40594|https://oafa.pitt.edu/costs/
+University of Pittsburgh(pitt)|40,594|https://oafa.pitt.edu/costs/
 University of Florida(ufl)|29,310|http://www.sfa.ufl.edu/basics/cost-of-attendance/
 Nebraska Wesleyan University(NWU)|38,140|https://www.nebrwesleyan.edu/business-office/tuition-and-fees
 University of Virginia(UVA)|48,737|http://sfs.virginia.edu/cost/14-15#GRAD12
